fix overflow episode picker

--- a/assets/stylesheets/mailtape.less
+++ b/assets/stylesheets/mailtape.less
@@ -1084,6 +1084,8 @@ article {
 		opacity: 0;
 		padding-top: 1rem;
 		font-size: 1.618rem;
+		overflow: hidden;
+		height: 100%;
 
 		.re-hash {
 			font-size: 0.618rem;
